# Drawing_LLM

./: .gitignore  README.md  clusters.json  description.csv  description1.csv  description2.csv  description2000.csv  description3.csv  description4.csv  descriptions.txt  id_description.csv  init.sh  main.py  output  pyproject.toml  score.csv  score1.csv  score2.csv  score2000.csv  score3.csv  score4.csv  score_score4.csv  sorted_score2000.csv  svg.csv  svg1.csv  svg2.csv  svg2000.csv  svg3.csv  svg4.csv  train.sh
.ipynb_checkpoints/: main-checkpoint.py  pyproject-checkpoint.toml
csv/: description.csv  svg.csv
generation_pipeline/: pipeline.py  prompt.py  util.py
generation_pipeline/.ipynb_checkpoints/: pipeline-checkpoint.py  setting-checkpoint.py
model/: model.py
rubbish/: description.csv  output  output.csv  output2.csv  score.csv  sorted_clusters.json  svg.csv  test.py
score/: score.py
score/.ipynb_checkpoints/: score-checkpoint.py
train_pipeline/: train.py
