[tool.poetry]
name = "drawing-llm"
version = "0.1.0"
description = "The kaggle project of drawing llm"
authors = ["Linghua Zhang <lz101@rice.edu>"]
license = "MIT"
readme = "README.md"
package-mode = false


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
openai = ">=1.66.3,<2.0.0"
cairosvg = ">=2.7.1,<3.0.0"
google-re2 = ">=1.1.20240702,<2.0.0"
kagglehub = ">=0.3.10,<0.4.0"
lxml = ">=5.3.1,<6.0.0"
pandas = ">=2.2.3,<3.0.0"
accelerate = "^1.5.2"
clip = {git = "https://github.com/openai/CLIP.git"}
datasets = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"